If applied, this moves all the github variables set in repo, to be moved to helm values files. Helm is for runtime/deploy-time, not build.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -131,25 +131,15 @@ jobs:
       - name: Deploy to UAT
         uses: ./.github/actions/deploy
         with:
+          app-environment: uat
           ecr-repository: ${{ vars.ECR_REPOSITORY }}
           ecr-registry_url: ${{ secrets.ECR_REGISTRY_URL }}
           kube-cert: ${{ secrets.KUBE_CERT }}
           kube-token: ${{ secrets.KUBE_TOKEN }}
           kube-cluster: ${{ secrets.KUBE_CLUSTER }}
           kube-namespace: ${{ secrets.KUBE_NAMESPACE }}
-          app-environment: uat
           session_secret: ${{ secrets.SESSION_SECRET }}
-          service_name: ${{ vars.SERVICE_NAME }}
-          service_phase: ${{ vars.SERVICE_PHASE }}
-          department_name: ${{ vars.DEPARTMENT_NAME }}
-          department_url: ${{ vars.DEPARTMENT_URL }}
-          contact_email: ${{ vars.CONTACT_EMAIL }}
-          service_url: ${{ vars.SERVICE_URL }}
-          session_name: ${{ vars.SESSION_NAME}}
-          ratelimit_headers_enabled: ${{ vars.RATELIMIT_HEADERS_ENABLED }}
-          ratelimit_storage_uri: ${{ vars.RATELIMIT_STORAGE_URI }}
-          ratelimit_max: ${{ vars.RATE_LIMIT_MAX }}
-          ratewindow_ms: ${{ vars.RATE_WINDOW_MS }}
+          slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
   
   deploy-staging:
     environment: staging
@@ -164,25 +154,14 @@ jobs:
       - name: Deploy to staging
         uses: ./.github/actions/deploy
         with:
+          app-environment: staging
           ecr-repository: ${{ vars.ECR_REPOSITORY }}
           ecr-registry_url: ${{ secrets.ECR_REGISTRY_URL }}
           kube-cert: ${{ secrets.KUBE_CERT }}
           kube-token: ${{ secrets.KUBE_TOKEN }}
           kube-cluster: ${{ secrets.KUBE_CLUSTER }}
           kube-namespace: ${{ secrets.KUBE_NAMESPACE }}
-          app-environment: staging
           session_secret: ${{ secrets.SESSION_SECRET }}
-          service_name: ${{ vars.SERVICE_NAME }}
-          service_phase: ${{ vars.SERVICE_PHASE }}
-          department_name: ${{ vars.DEPARTMENT_NAME }}
-          department_url: ${{ vars.DEPARTMENT_URL }}
-          contact_email: ${{ vars.CONTACT_EMAIL }}
-          service_url: ${{ vars.SERVICE_URL }}
-          session_name: ${{ vars.SESSION_NAME}}
-          ratelimit_headers_enabled: ${{ vars.RATELIMIT_HEADERS_ENABLED }}
-          ratelimit_storage_uri: ${{ vars.RATELIMIT_STORAGE_URI }}
-          ratelimit_max: ${{ vars.RATE_LIMIT_MAX }}
-          ratewindow_ms: ${{ vars.RATE_WINDOW_MS }}
           slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
 
   deploy-production:
@@ -198,23 +177,12 @@ jobs:
       - name: Deploy to production
         uses: ./.github/actions/deploy
         with:
+          app-environment: production
           ecr-repository: ${{ vars.ECR_REPOSITORY }}
           ecr-registry_url: ${{ secrets.ECR_REGISTRY_URL }}
           kube-cert: ${{ secrets.KUBE_CERT }}
           kube-token: ${{ secrets.KUBE_TOKEN }}
           kube-cluster: ${{ secrets.KUBE_CLUSTER }}
           kube-namespace: ${{ secrets.KUBE_NAMESPACE }}
-          app-environment: production
           session_secret: ${{ secrets.SESSION_SECRET }}
-          service_name: ${{ vars.SERVICE_NAME }}
-          service_phase: ${{ vars.SERVICE_PHASE }}
-          department_name: ${{ vars.DEPARTMENT_NAME }}
-          department_url: ${{ vars.DEPARTMENT_URL }}
-          contact_email: ${{ vars.CONTACT_EMAIL }}
-          service_url: ${{ vars.SERVICE_URL }}
-          session_name: ${{ vars.SESSION_NAME}}
-          ratelimit_headers_enabled: ${{ vars.RATELIMIT_HEADERS_ENABLED }}
-          ratelimit_storage_uri: ${{ vars.RATELIMIT_STORAGE_URI }}
-          ratelimit_max: ${{ vars.RATE_LIMIT_MAX }}
-          ratewindow_ms: ${{ vars.RATE_WINDOW_MS }}
           slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
