--- a/deploy/laa-manage-your-civil-cases/values/uat.yaml
+++ b/deploy/laa-manage-your-civil-cases/values/uat.yaml
@@ -79,21 +79,19 @@ readinessProbe:
   periodSeconds: 60
 
 env:
-  # These will be overridden by deploy.sh with values from GitHub vars/secrets
-  SERVICE_NAME: ""
-  SERVICE_PHASE: ""
-  DEPARTMENT_NAME: ""
-  DEPARTMENT_URL: ""
-  CONTACT_EMAIL: ""
+  SERVICE_NAME: "Manage your civil cases"
+  SERVICE_PHASE: "Omega"
+  DEPARTMENT_NAME: "Legal Aid Agency"
+  DEPARTMENT_URL: "https://www.gov.uk/government/organisations/legal-aid-agency"
+  CONTACT_EMAIL: "eligibility@justice.gov.uk"
   CONTACT_PHONE: ""
-  SERVICE_URL: ""
-  SESSION_SECRET: ""
-  SESSION_NAME: ""
-  RATELIMIT_HEADERS_ENABLED: ""
+  SERVICE_URL: "https://www.gov.uk/legal-aid"
+  SESSION_NAME: "sessionId"
+  RATELIMIT_HEADERS_ENABLED: true
   RATELIMIT_STORAGE_URI: ""
-  RATE_LIMIT_MAX: ""
-  RATE_WINDOW_MS: ""
-  NODE_ENV: ""
+  RATE_LIMIT_MAX: 100
+  RATE_WINDOW_MS: 900000
+  NODE_ENV: "uat"
 
 autoscaling:
   enabled: false
