--- a/.github/actions/deploy/action.yml
+++ b/.github/actions/deploy/action.yml
@@ -59,6 +59,7 @@ runs:
         GITHUB_SHA: ${{ github.sha }}
         GITHUB_REF_NAME: ${{ github.ref_name }}
         K8S_NAMESPACE: ${{ inputs.kube-namespace }}
+        SESSION_SECRET: ${{ inputs.session_secret }}
 
     - name: Notify deployment failure
       shell: bash
