Revert `SERVICE_PHASE` back to `Beta` - this was done only for testing.

--- a/deploy/laa-manage-your-civil-cases/values/production.yaml
+++ b/deploy/laa-manage-your-civil-cases/values/production.yaml
@@ -45,7 +45,7 @@ securityContext:
 
 env:
   SERVICE_NAME: "Manage your civil cases"
-  SERVICE_PHASE: "Omega"
+  SERVICE_PHASE: "Beta"
   DEPARTMENT_NAME: "Legal Aid Agency"
   DEPARTMENT_URL: "https://www.gov.uk/government/organisations/legal-aid-agency"
   CONTACT_EMAIL: "eligibility@justice.gov.uk"
