--- a/.github/actions/deploy/action.yml
+++ b/.github/actions/deploy/action.yml
@@ -60,6 +60,10 @@ runs:
         GITHUB_REF_NAME: ${{ github.ref_name }}
         K8S_NAMESPACE: ${{ inputs.kube-namespace }}
         SESSION_SECRET: ${{ inputs.session_secret }}
+        API_USERNAME: ${{ inputs.api_username }}
+        API_PASSWORD: ${{ inputs.api_password }}
+        API_CLIENT_ID: ${{ inputs.api_client_id }}
+        API_CLIENT_SECRET: ${{ inputs.api_client_secret }}
 
     - name: Notify deployment failure
       shell: bash
