--- a/deploy/laa-manage-your-civil-cases/values/uat.yaml
+++ b/deploy/laa-manage-your-civil-cases/values/uat.yaml
@@ -92,6 +92,10 @@ env:
   RATE_LIMIT_MAX: 100
   RATE_WINDOW_MS: 900000
   NODE_ENV: "uat"
+  API_URL: "http://laa-civil-case-api.laa-civil-case-api-uat"
+  API_PREFIX: '/latest/mock'
+  API_TIMEOUT: 5000
+  API_RETRIES: 3
 
 autoscaling:
   enabled: false
