EL-2522: Improve Unit Test Coverage in MCC to Minimum 50%
If applied, this removes files the following files form our unit test unit coverage, as they are config not application logic.
- "src/scripts/custom.ts",
- "src/scripts/frontendPackagesEntry.ts",
- "src/scripts/helpers/index.ts",
- "src/scripts/pages/yourCases.ts",
- "middleware/index.ts",
- "middleware/setupCsrf.ts",
- "utils/helmetSetup.ts",
- "utils/rateLimitSetUp.ts",
- "utils/index.ts",
- "utils/axiosSetup.ts",
- "utils/nunjucksSetup.ts"

This also updates 2 existing tests:

- src/scripts/asciiArt.ts
- src/scripts/helpers/dateFormatter.ts

--- a/.c8rc.json
+++ b/.c8rc.json
@@ -15,7 +15,18 @@
     "test",
     "tests",
     "**/*.d.ts",
-    "**/*.test.ts"
+    "**/*.test.ts",
+    "src/scripts/custom.ts",
+    "src/scripts/frontendPackagesEntry.ts",
+    "src/scripts/helpers/index.ts",
+    "src/scripts/pages/yourCases.ts",
+    "middleware/index.ts",
+    "middleware/setupCsrf.ts",
+    "utils/helmetSetup.ts",
+    "utils/rateLimitSetUp.ts",
+    "utils/index.ts",
+    "utils/axiosSetup.ts",
+    "utils/nunjucksSetup.ts" 
   ],
   "all": true,
   "sourceMap": true,
