--- a/.c8rc.json
+++ b/.c8rc.json
@@ -15,13 +15,24 @@
     "test",
     "tests",
     "**/*.d.ts",
-    "**/*.test.ts"
+    "**/*.test.ts",
+    "src/scripts/custom.ts",
+    "src/scripts/frontendPackagesEntry.ts",
+    "src/scripts/helpers/index.ts",
+    "src/scripts/pages/yourCases.ts",
+    "middleware/index.ts",
+    "middleware/setupCsrf.ts",
+    "utils/helmetSetup.ts",
+    "utils/rateLimitSetUp.ts",
+    "utils/index.ts",
+    "utils/axiosSetup.ts",
+    "utils/nunjucksSetup.ts" 
   ],
   "all": true,
   "sourceMap": true,
   "check-coverage": true,
-  "lines": 1,
-  "functions": 1,
-  "branches": 1,
-  "statements": 1
+  "lines": 35,
+  "functions": 78,
+  "branches": 83,
+  "statements": 35
 }
