chore: add comprehensive test infrastructure to improve code coverage
This commit introduces general test infrastructure improvements as a
pre-requisite to enable EL-2457-client-date-of-birth-editing branch
to pass the 67% code coverage gate.

The DOB editing branch (EL-2457-client-date-of-birth-editing) requires
67% function coverage to pass CI, currently sitting at 64.19%. Rather
than mixing general infrastructure improvements with feature-specific
code, this separate branch provides the foundation test improvements.

- Comprehensive form validation tests (formValidationRules.spec.ts, validateForm.spec.ts)
- Controller test coverage for caseDetailsController, editClientDetailsController, yourCasesController
- Tests cover edge cases, error scenarios, and return structure validation

These tests target general application infrastructure that benefits
all features, providing a solid foundation for the codebase while
working toward the coverage threshold needed for DOB feature approval.

- Relates to: EL-2457-client-date-of-birth-editing branch
- Builds on coverage improvements from commit d5db284
- Enables meeting 67% function coverage requirement for CI

--- a/.github/workflows/mocha.yml
+++ b/.github/workflows/mocha.yml
@@ -29,6 +29,11 @@ jobs:
 
       - name: Run Mocha unit tests & c8 code coverage
         run: yarn c8 yarn test:unit --check-coverage
+        env:
+          CI: true
+          # Add session-related environment variables for unit tests
+          SESSION_SECRET: "mocha-test-secret" # Use a simple test secret for Mocha unit tests
+          SESSION_NAME: "sessionId"
 
       - name: Upload coverage artifact
         if: always()
