--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "govuk-frontend": "^5.11.1",
     "helmet": "^8.1.0",
     "http-errors": "~2.0.0",
+    "libphonenumber-js": "^1.12.10",
     "moment": "^2.30.1",
     "morgan": "~1.10.1",
     "nunjucks": "^3.2.4"
