--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "libphonenumber-js": "^1.12.10",
     "moment": "^2.30.1",
     "morgan": "~1.10.1",
-    "nunjucks": "^3.2.4"
+    "nunjucks": "^3.2.4",
+    "zod": "^4.0.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
