--- a/package.json
+++ b/package.json
@@ -48,8 +48,7 @@
     "libphonenumber-js": "^1.12.10",
     "moment": "^2.30.1",
     "morgan": "~1.10.1",
-    "nunjucks": "^3.2.4",
-    "zod": "^4.0.15"
+    "nunjucks": "^3.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
