--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "livereload": "^0.10.2",
     "middleware-axios": "^3.0.0",
     "mocha": "^11.7.1",
+    "msw": "^2.10.5",
     "nodemon": "^3.1.9",
     "prettier": "^3.6.2",
     "rimraf": "^6.0.1",
