Adds support for dynamically generating types from JSON files

--- a/.c8rc.json
+++ b/.c8rc.json
@@ -19,6 +19,7 @@
     "src/scripts/custom.ts",
     "src/scripts/frontendPackagesEntry.ts",
     "src/scripts/helpers/index.ts",
+    "src/scripts/helpers/localeTypes.ts",
     "src/scripts/pages/yourCases.ts",
     "middleware/index.ts",
     "middleware/setupCsrf.ts",
