--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
   "scripts": {
     "start": "node public/app.js",
     "clean": "rimraf public",
-    "build": "yarn clean && yarn build:ts && node public/esbuild.js",
+    "build": "yarn clean && yarn generate-types && yarn build:ts && node public/esbuild.js",
     "lint": "yarn eslint . --fix",
-    "dev": "yarn build:ts && concurrently \"tsc --watch\" \"node public/esbuild.js --watch\" \"nodemon\"",
+    "dev": "yarn generate-types && yarn build:ts && concurrently \"tsc --watch\" \"node public/esbuild.js --watch\" \"nodemon\"",
     "deploy": "./scripts/deploy.sh",
     "prepare": "husky",
     "tsc": "tsc --noEmit",
     "build:ts": "tsc",
+    "generate-types": "node scripts/generate-types.cjs",
     "test": "yarn test:unit && yarn test:e2e",
-    "test:unit": "mocha",
+    "test:unit": "yarn generate-types && mocha",
     "test:e2e": "yarn playwright test --config=playwright.config.ts",
     "coverage": "c8 yarn test:unit --check-coverage"
   },
