--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "start": "node public/app.js",
     "clean": "rimraf public",
-    "build": "yarn clean && yarn generate-types && yarn build:ts && node public/esbuild.js",
+    "build": "yarn clean && yarn build:ts && node public/esbuild.js",
     "lint": "yarn eslint . --fix",
     "dev": "yarn build:ts && concurrently \"tsc --watch\" \"node public/esbuild.js --watch\" \"nodemon\"",
     "deploy": "./scripts/deploy.sh",
@@ -46,7 +46,6 @@
     "helmet": "^8.1.0",
     "http-errors": "~2.0.0",
     "i18next": "^25.4.0",
-    "i18next-fs-backend": "^2.6.0",
     "i18next-http-middleware": "^3.8.0",
     "libphonenumber-js": "^1.12.10",
     "moment": "^2.30.1",
@@ -64,7 +63,6 @@
     "@types/express-session": "^1.18.1",
     "@types/figlet": "^1.7.0",
     "@types/fs-extra": "^11.0.4",
-    "@types/i18next-fs-backend": "^1.2.0",
     "@types/jsdom": "^21.1.7",
     "@types/livereload": "^0.9.5",
     "@types/mocha": "^10.0.10",
