feat: implement WCAG 2.2 AA accessibility testing with Playwright and axe-core
- Add @axe-core/playwright integration with comprehensive test coverage
- Create accessibility fixture with WCAG 2.2 AA rules (wcag2a, wcag2aa, wcag21a, wcag21aa, wcag22aa)
- Add accessibility tests for all E2E pages using proper Playwright tag system
- Implement parallel CI jobs for functional and accessibility tests
- Add yarn test:accessibility command for dedicated accessibility testing
- Fix template syntax issue in edit-date-of-birth.njk causing document-title violations
- Update documentation with accessibility testing guidelines and CI integration
- Configure GitHub Actions to generate downloadable accessibility reports

All pages now pass WCAG 2.2 AA compliance checks with proper test separation and CI integration.

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -41,7 +41,7 @@ jobs:
           key: ${{ runner.os }}-playwright-chromium-${{ hashFiles('**/yarn.lock') }}
 
       - name: Run Playwright tests
-        run: yarn playwright test
+        run: yarn playwright test --grep-invert @accessibility
         env:
           CI: true
           PLAYWRIGHT_TRACING: "on" # Enable tracing for all tests
@@ -77,3 +77,72 @@ jobs:
       - name: Notify on test failure
         if: failure()
         run: echo "::error::Playwright tests failed! Check the test report for details."
+
+  accessibility:
+    name: Accessibility Tests
+    timeout-minutes: 30
+    runs-on: ubuntu-latest
+    outputs:
+      status: ${{ job.status }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v5
+        with:
+          fetch-depth: 0
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "24.6.0"
+
+      - name: Enable Corepack
+        run: corepack enable
+
+      - name: Install dependencies
+        run: yarn install --immutable
+
+      - name: Build application
+        run: yarn build
+
+      - name: Install Playwright Chromium
+        run: yarn playwright install chromium --with-deps
+
+      - name: Cache Playwright browsers
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/ms-playwright
+          key: ${{ runner.os }}-playwright-chromium-${{ hashFiles('**/yarn.lock') }}
+
+      - name: Run Accessibility Tests
+        run: yarn playwright test --grep @accessibility
+        env:
+          CI: true
+          SESSION_SECRET: "accessibility-test-secret"
+          SESSION_NAME: "sessionId"
+          NODE_ENV: "test"
+          SERVICE_NAME: "Manage your civil cases"
+          SERVICE_PHASE: "Beta"
+          DEPARTMENT_NAME: "Legal Aid Agency"
+          DEPARTMENT_URL: "https://www.gov.uk/government/organisations/legal-aid-agency"
+          CONTACT_EMAIL: "your-team@digital.justice.gov.uk"
+          SERVICE_URL: "https://www.gov.uk/legal-aid"
+          RATELIMIT_HEADERS_ENABLED: "true"
+          RATE_LIMIT_MAX: "100"
+          RATE_WINDOW_MS: "900000"
+          API_URL: "http://localhost:3001"
+          API_PREFIX: "/mock-api"
+          USE_MOCK_API: "true"
+
+      - name: Upload Accessibility Report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: accessibility-report
+          path: |
+            playwright-report/
+            test-results/
+          retention-days: 14
+
+      - name: Notify on accessibility failure
+        if: failure()
+        run: echo "::error::Accessibility tests failed! Check the accessibility report for details."
