--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test": "yarn test:unit && yarn test:e2e",
     "test:unit": "mocha",
     "test:e2e": "yarn playwright test --config=playwright.config.ts",
+    "test:accessibility": "yarn playwright test --grep @accessibility",
     "coverage": "c8 yarn test:unit --check-coverage"
   },
   "engines": {
@@ -52,6 +53,7 @@
     "nunjucks": "^3.2.4"
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.10.2",
     "@eslint/js": "^9.33.0",
     "@playwright/test": "^1.54.2",
     "@types/chai": "^5.2.2",
@@ -73,6 +75,7 @@
     "@types/validator": "^13.15.2",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
+    "axe-core": "^4.10.3",
     "c8": "^10.1.3",
     "chai": "^5.2.1",
     "chokidar": "4.0.3",
