--- a/.github/workflows/publish-documentation.yml
+++ b/.github/workflows/publish-documentation.yml
@@ -20,14 +20,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: ministryofjustice/tech-docs-github-pages-publisher:v6.0.1
+      image: ministryofjustice/tech-docs-github-pages-publisher:v3
     permissions:
       contents: read
     steps:
       # We only checkout the docs directory, which allows us to keep all necessary files for
       # generating the docs separate from the app.
       - name: Checkout
-        uses: actions/checkout@v5 
+        # updating to `actions/checkout@v5` had compatibility issues with the base image (EL-2591)
+        uses: actions/checkout@v4 
         with:
           sparse-checkout: |
             docs
@@ -39,9 +40,9 @@ jobs:
           mv docs/* .
           rm -rf docs
       - name: Compile Markdown to HTML and create artifact
-        # Script to deploy is not in the repo, but in this image: `ministryofjustice/tech-docs-github-pages-publisher:v6.0.1`
+        # Script to deploy is not in the repo, but in this image: `ministryofjustice/tech-docs-github-pages-publisher:v3`
         run: |
-          /usr/local/bin/package
+          /scripts/deploy.sh
       - name: Upload artifact to be published
         uses: actions/upload-artifact@v4
         with:
