skip gov frontend link

--- a/.github/workflows/publish-documentation.yml
+++ b/.github/workflows/publish-documentation.yml
@@ -83,4 +83,8 @@ jobs:
           tar -xvf artifact.tar
           npm install linkinator
           npx linkinator . --recurse --markdown \
-            --skip https://ministryofjustice.github.io/laa-manage-your-civil-cases/images/govuk-large.png
+            --skip https://ministryofjustice.github.io/laa-manage-your-civil-cases/images/govuk-large.png \
+            --skip javascripts/govuk_frontend.js
+            # Skip govuk_frontend.js due to MOJ Docker image template bug:
+            # The tech-docs-github-pages-publisher:v6.0.1 image generates HTML with
+            # <script src="javascripts/govuk_frontend.js"> but doesn't provide the file
