--- a/.github/workflows/publish-documentation.yml
+++ b/.github/workflows/publish-documentation.yml
@@ -27,8 +27,8 @@ jobs:
       # We only checkout the docs directory, which allows us to keep all necessary files for
       # generating the docs separate from the app.
       - name: Checkout
-        # updating to `actions/checkout@v5` had compatibility issues with the base image (EL-2591)
-        uses: actions/checkout@v4 
+        # Updated to v5 now that Docker image v6.0.1 resolved previous compatibility issues (EL-2591)
+        uses: actions/checkout@v5 
         with:
           sparse-checkout: |
             docs
