updates deploy steps to enable corepack

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -21,9 +21,13 @@ jobs:
         uses: actions/setup-node@v5
         with:
           node-version: "24.7.0" # Match project's Node version
+        env:
+          SKIP_YARN_COREPACK_CHECK: '1'
 
-      - name: Enable Corepack
-        run: corepack enable
+      - name: Enable Corepack and prepare Yarn
+        run: |
+          corepack enable
+          corepack prepare yarn@4.9.2 --activate
 
       - name: Install dependencies
         run: yarn install --immutable
@@ -94,9 +98,13 @@ jobs:
         uses: actions/setup-node@v5
         with:
           node-version: "24.7.0"
+        env:
+          SKIP_YARN_COREPACK_CHECK: '1'
 
-      - name: Enable Corepack
-        run: corepack enable
+      - name: Enable Corepack and prepare Yarn
+        run: |
+          corepack enable
+          corepack prepare yarn@4.9.2 --activate
 
       - name: Install dependencies
         run: yarn install --immutable
