--- a/.github/workflows/mocha.yml
+++ b/.github/workflows/mocha.yml
@@ -17,12 +17,16 @@ jobs:
         uses: actions/checkout@v5
 
       - name: Set up Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v5
         with:
-          node-version: '24.6.0'
+          node-version: '24.7.0'
+        env:
+          SKIP_YARN_COREPACK_CHECK: '1'
 
-      - name: Enable Corepack
-        run: corepack enable
+      - name: Enable Corepack and prepare Yarn
+        run: |
+          corepack enable
+          corepack prepare yarn@4.9.2 --activate
 
       - name: Install dependencies
         run: yarn install --immutable
