--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -18,12 +18,16 @@ jobs:
           fetch-depth: 0 # Fetch all history for proper change detection
 
       - name: Set up Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v5
         with:
-          node-version: "24.6.0" # Match project's Node version
+          node-version: "24.7.0" # Match project's Node version
+        env:
+          SKIP_YARN_COREPACK_CHECK: '1'
 
-      - name: Enable Corepack
-        run: corepack enable
+      - name: Enable Corepack and prepare Yarn
+        run: |
+          corepack enable
+          corepack prepare yarn@4.9.2 --activate
 
       - name: Install dependencies
         run: yarn install --immutable
@@ -91,12 +95,16 @@ jobs:
           fetch-depth: 0
 
       - name: Set up Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v5
         with:
-          node-version: "24.6.0"
+          node-version: "24.7.0"
+        env:
+          SKIP_YARN_COREPACK_CHECK: '1'
 
-      - name: Enable Corepack
-        run: corepack enable
+      - name: Enable Corepack and prepare Yarn
+        run: |
+          corepack enable
+          corepack prepare yarn@4.9.2 --activate
 
       - name: Install dependencies
         run: yarn install --immutable
