feat: implement MSW for E2E testing with comprehensive test coverage
• Implement Mock Service Worker (MSW) v2.x for API mocking in E2E tests
• Add comprehensive MSW handlers for all API endpoints
• Create E2E tests for remove client support needs confirmation routes
• Refactor third party form tests to use shared page object model
• Add ThirdPartyFormPage extending BaseEditFormPage for DRY testing
• Configure test infrastructure with MSW integration
• Add test server configurations for both standalone and full app testing
• Resolve ESLint configuration issues for test infrastructure
• Fix TypeScript compilation errors in test and script files
• Eliminate external API dependencies during testing

This implementation provides reliable, fast E2E testing by mocking downstream
API calls, improving test stability and reducing network dependencies.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "build:ts": "tsc",
     "test": "yarn test:unit && yarn test:e2e",
     "test:unit": "./node_modules/.bin/mocha",
+    "test:server": "node public/src/test-server.js",
     "test:e2e": "yarn playwright test --config=playwright.config.ts",
     "test:accessibility": "yarn playwright test --grep @accessibility",
     "coverage": "c8 yarn test:unit --check-coverage"
@@ -97,6 +98,7 @@
     "livereload": "^0.10.2",
     "middleware-axios": "^3.0.0",
     "mocha": "^11.7.2",
+    "msw": "^2.11.2",
     "nodemon": "^3.1.9",
     "playwright-core": "^1.55.1",
     "prettier": "^3.6.2",
