with yarn 4 explicit execution path

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "tsc": "tsc --noEmit",
     "build:ts": "tsc",
     "test": "yarn test:unit && yarn test:e2e",
-    "test:unit": "mocha",
+    "test:unit": "./node_modules/.bin/mocha",
     "test:e2e": "yarn playwright test --config=playwright.config.ts",
     "test:accessibility": "yarn playwright test --grep @accessibility",
     "coverage": "c8 yarn test:unit --check-coverage"
