--- a/.github/workflows/mocha.yml
+++ b/.github/workflows/mocha.yml
@@ -16,10 +16,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v5
 
+      - name: Read Node version from .nvmrc
+        run: echo "NODE_VERSION=$(cat .nvmrc)" >> $GITHUB_ENV
+
       - name: Set up Node.js
         uses: actions/setup-node@v5
         with:
-          node-version: '24.7.0'
+          node-version: ${{ env.NODE_VERSION }}
         env:
           SKIP_YARN_COREPACK_CHECK: '1'
 
