--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -17,10 +17,13 @@ jobs:
         with:
           fetch-depth: 0 # Fetch all history for proper change detection
 
+      - name: Read Node version from .nvmrc
+        run: echo "NODE_VERSION=$(cat .nvmrc)" >> $GITHUB_ENV
+
       - name: Set up Node.js
         uses: actions/setup-node@v5
         with:
-          node-version: "24.7.0" # Match project's Node version
+          node-version: ${{ env.NODE_VERSION }} # Match project's Node version
         env:
           SKIP_YARN_COREPACK_CHECK: '1'
 
@@ -94,10 +97,13 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Read Node version from .nvmrc
+        run: echo "NODE_VERSION=$(cat .nvmrc)" >> $GITHUB_ENV
+
       - name: Set up Node.js
         uses: actions/setup-node@v5
         with:
-          node-version: "24.7.0"
+          node-version: ${{ env.NODE_VERSION }}
         env:
           SKIP_YARN_COREPACK_CHECK: '1'
 
