refactor: move playwright folder to tests/playwright and update all configurations
- Move playwright/ directory to tests/playwright/ to follow project structure conventions
- Update package.json scripts to reference new config path
- Update GitHub workflow to use new config location
- Update playwright.config.ts cwd path for deeper nesting
- Update eslint.config.js ignore patterns
- Update tsconfig.test.json include paths
- Update .gitignore playwright cache path
- Update README.md documentation paths
- Update MSW_OFFICIAL_DATA_MIGRATION.md file references
- Update test-server-with-msw.ts import paths
- All 73 E2E tests passing after restructure

--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@ public/
 /test-results/
 /playwright-report/
 /blob-report/
-/playwright/.cache/
+/tests/playwright/.cache/
 
 # Code coverage
 coverage/
