If applied, this removes references to MoJ Express Skeleton, where applicable

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "moj-express-skeleton",
-  "version": "0.1.0",
+  "name": "laa-manage-your-civil-cases",
+  "version": "1.0.0",
   "private": true,
   "license": "MIT",
   "main": "public/app.js",
