--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,23 +14,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v5
 
-      - name: Read Node version from .nvmrc
-        run: echo "NODE_VERSION=$(cat .nvmrc)" >> $GITHUB_ENV
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v5
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-        env:
-          SKIP_YARN_COREPACK_CHECK: '1'
-
-      - name: Enable Corepack and prepare Yarn
-        run: |
-          corepack enable
-          corepack prepare yarn@4.9.2 --activate
-
-      - name: Install dependencies
-        run: yarn install --immutable
+      - name: Setup Node and Dependencies
+        uses: ./.github/actions/setup-node
 
       - name: Run ESLint
         run: yarn lint
@@ -42,23 +27,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v5
 
-      - name: Read Node version from .nvmrc
-        run: echo "NODE_VERSION=$(cat .nvmrc)" >> $GITHUB_ENV
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v5
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-        env:
-          SKIP_YARN_COREPACK_CHECK: '1'
-
-      - name: Enable Corepack and prepare Yarn
-        run: |
-          corepack enable
-          corepack prepare yarn@4.9.2 --activate
-
-      - name: Install dependencies
-        run: yarn install --immutable
+      - name: Setup Node and Dependencies
+        uses: ./.github/actions/setup-node
 
       - name: Run security audit
         run: yarn npm audit
