--- a/.github/workflows/mocha.yml
+++ b/.github/workflows/mocha.yml
@@ -16,23 +16,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v5
 
-      - name: Read Node version from .nvmrc
-        run: echo "NODE_VERSION=$(cat .nvmrc)" >> $GITHUB_ENV
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v5
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-        env:
-          SKIP_YARN_COREPACK_CHECK: '1'
-
-      - name: Enable Corepack and prepare Yarn
-        run: |
-          corepack enable
-          corepack prepare yarn@4.9.2 --activate
-
-      - name: Install dependencies
-        run: yarn install --immutable
+      - name: Setup Node and Dependencies
+        uses: ./.github/actions/setup-node
 
       - name: Run Mocha unit tests & c8 code coverage
         run: yarn c8 yarn test:unit --check-coverage
