Also remove playwright from deploying to UAT

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -119,7 +119,7 @@ jobs:
       - snyk
       - build-image
       - mocha-unit-tests
-      - playwright
+      # - playwright
 
     steps:
       - name: Checkout
