If applied this updates the API config.

--- a/.env.example
+++ b/.env.example
@@ -14,12 +14,8 @@ NODE_ENV=development
 SESSION_SECRET='s3Cur3'
 SESSION_NAME='sessionId'
 
-# Civil Case API Configuration
-API_URL='https://laa-civil-case-api-uat.cloud-platform.service.justice.gov.uk'
-API_PREFIX='/latest/mock'
-API_TIMEOUT=5000
-API_RETRIES=3
-API_USERNAME='test-user'
-API_PASSWORD='london12'
-API_CLIENT_ID='test-client-local'
-API_CLIENT_SECRET='test-client-local-secret'
+# CLA Backend
+API_URL='https://laa-cla-backend-uat.apps.live-1.cloud-platform.service.justice.gov.uk'
+API_PREFIX='/cla_provider/api/v1'
+API_CLIENT_ID='Speak to another Dev'
+API_CLIENT_SECRET='Speak to another Dev'
