double quotes instead of single quotes, for the values

--- a/deploy/laa-manage-your-civil-cases/values/staging.yaml
+++ b/deploy/laa-manage-your-civil-cases/values/staging.yaml
@@ -81,7 +81,7 @@ env:
   RATE_WINDOW_MS: 900000
   NODE_ENV: "staging"
   API_URL: "https://laa-cla-backend-uat.apps.live-1.cloud-platform.service.justice.gov.uk"
-  API_PREFIX: '/cla_provider/api/v1'
+  API_PREFIX: "/cla_provider/api/v1"
 
 livenessProbe:
   httpGet:
