--- a/deploy/laa-manage-your-civil-cases/values/production.yaml
+++ b/deploy/laa-manage-your-civil-cases/values/production.yaml
@@ -58,7 +58,7 @@ env:
   RATE_WINDOW_MS: 900000
   NODE_ENV: "production"
   API_URL: "https://laa-cla-backend-uat.apps.live-1.cloud-platform.service.justice.gov.uk"
-  API_PREFIX: '/cla_provider/api/v1'
+  API_PREFIX: "/cla_provider/api/v1"
 
 ingress:
   enabled: true
