--- a/deploy/laa-manage-your-civil-cases/templates/deployment.yaml
+++ b/deploy/laa-manage-your-civil-cases/templates/deployment.yaml
@@ -81,12 +81,12 @@ spec:
               value: "{{ .Values.env.API_URL }}"
             - name: API_PREFIX
               value: "{{ .Values.env.API_PREFIX }}"
-            - name: API_TIMEOUT
-              value: "{{ .Values.env.API_TIMEOUT }}"
-            - name: API_RETRIES
-              value: "{{ .Values.env.API_RETRIES }}"
             - name: NODE_ENV
               value: "{{ .Values.env.NODE_ENV }}"
+            - name: API_CLIENT_ID
+              value: "{{ .Values.env.API_CLIENT_ID }}"
+            - name: API_CLIENT_SECRET
+              value: "{{ .Values.env.API_CLIENT_SECRET }}"
       {{- with .Values.volumes }}
       volumes:
         {{- toYaml . | nindent 8 }}
