--- a/deploy/laa-manage-your-civil-cases/values/uat.yaml
+++ b/deploy/laa-manage-your-civil-cases/values/uat.yaml
@@ -90,7 +90,7 @@ env:
   RATE_LIMIT_MAX: 100
   RATE_WINDOW_MS: 900000
   NODE_ENV: "uat"
-  API_URL: "https://laa-cla-backend-uat.apps.live-1.cloud-platform.service.justice.gov.uk"
+  API_URL: "http://cla-backend-app.laa-cla-backend-uat.svc.cluster.local"
   API_PREFIX: "/cla_provider/api/v1"
 
 autoscaling:
